<resources>

    <string name="app_name">BikePlus</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="text_current_speed">当前速度</string>
    <string name="text_current_durition">骑行时长：</string>
    <string name="text_start_time">开始时间：</string>
    <string name="text_end_time">结束时间：</string>
    <string name="text_begin">开始</string>
    <string name="text_stop">停止</string>
    <string name="text_pause">暂停</string>
    <string name="text_resulme">继续</string>
    <string name="text_second">秒</string>
    <string name="text_minute">分</string>
    <string name="text_hour">时</string>
    <string name="text_high_speed">最快速度</string>
    <string name="text_average_speed">平均速度：</string>
    <string name="text_total_distance">总里程数：</string>
    <string name="text_total_times">总骑行次数</string>
    <string name="text_total_average_speed">总平均速度</string>
    <string name="NORTH">正北</string>
    <string name="WEST">正西</string>
    <string name="SOUTH">正南</string>
    <string name="EAST">正东</string>
    <string name="NORTH_WEST">北偏西</string>
    <string name="NORTH_EAST">北偏东</string>
    <string name="SOUTH_WEST">南偏西</string>
    <string name="SOUTH_EAST">南偏东</string>

</resources>