<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_total_disatance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal">

        <TableRow android:gravity="center_horizontal">

            <TextView
                android:padding="3dip"
                android:text="@string/text_total_times" />

            <TextView
                android:padding="3dip"
                android:text="@string/text_total_average_speed" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_total_times"
                android:padding="3dip" />

            <TextView
                android:id="@+id/txt_total_average_speed"
                android:padding="3dip" />

            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/text_begin" />
        </TableRow>
    </TableLayout>

</LinearLayout>