<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/total_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_total_distance"
            tools:context=".MainActivity" />

        <TextView
            android:id="@+id/txt_total_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context=".MainActivity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/average_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_average_speed"
            tools:context=".MainActivity" />

        <TextView
            android:id="@+id/txt_average_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context=".MainActivity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/current_durition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_current_durition" />

        <TextView
            android:id="@+id/txt_current_durition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="left"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/high_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/speed_bg_color"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/high_speed_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_high_speed"
                    tools:context=".MainActivity" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(km/h)"
                    android:textColor="#FFFFFF"
                    tools:context=".MainActivity" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_high_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/high_speed_line"
                android:layout_centerHorizontal="true"
                android:alpha="50"
                android:background="@color/speed_text_color"
                android:hint="00.00"
                android:textSize="45dip"
                tools:context=".MainActivity" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/current_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@+id/high_speed"
            android:background="@color/speed_bg_color"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/current_speed_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/view2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_current_speed"
                    tools:context=".MainActivity" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(km/h)"
                    android:textColor="#FFFFFF"
                    tools:context=".MainActivity" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_current_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/current_speed_line"
                android:layout_centerHorizontal="true"
                android:background="@color/speed_text_color"
                android:hint="00.00"
                android:textColor="#bf0000"
                android:textSize="45dip"
                tools:context=".MainActivity" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>