<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <include
            android:id="@+id/gyroscope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            layout="@layout/gyroscope" >
        </include>

        <TextView
            android:id="@+id/txt_bearing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gyroscope"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:textColor="@color/gyroscope_text_color" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="-30dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_start_time" />

                <TextView
                    android:id="@+id/txt_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_end_time" />

                <TextView
                    android:id="@+id/txt_stop_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <include
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/data" >
        </include>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/data"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/start_selector"
                android:onClick="onClick"
                android:padding="15dip"
                android:text="@string/text_begin"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FF0000"
                android:textSize="25dip"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:background="@drawable/stop_selector"
                android:enabled="false"
                android:onClick="onClick"
                android:padding="15dip"
                android:text="@string/text_pause"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#00FF00"
                android:textSize="25dip"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/center"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:padding="5dip" >

            <Button
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_menu_set_as" />

            <Button
                android:id="@+id/btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:background="@drawable/ic_menu_preferences" />
        </LinearLayout>

        <include
            android:id="@+id/chart_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            layout="@layout/chart" />
    </RelativeLayout>

</RelativeLayout>